fixing z-index bug

--- a/docs/index.css
+++ b/docs/index.css
@@ -7,15 +7,19 @@ body {
 /*Colors*/
 .blue{
 	background-color:dodgerblue;
+
 }
 .tomato{
 	background-color:tomato;
+
 }
 .blueBorder{
 	border: 4px solid dodgerblue;
+
 }
 .tomatoBorder{
 	border: 4px solid tomato;
+
 }
 
 /*sizes*/
@@ -75,6 +79,7 @@ body {
   top:50%;
   left:50%;
   cursor: pointer;
+  z-index:10;
 }
 .expander{
   z-index:1;
@@ -93,12 +98,13 @@ body {
     opacity: 0;
   }
 }
-.handle{
-	z-index:10;	
+.handle{	
   border:4px solid #fff; 
   position:absolute;
+  z-index:inherit;
 }
 .other{
 	position:absolute;
 	display:none;
+	z-index:5;
 }
